--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 /*지도 확대, 축소 컨트롤 객체, 교통혼잡 객체, 스카이뷰*/
 .radius_border{border:1px solid #919191;border-radius:5px;}
 .custom_zoomcontrol {position:absolute;top:50px;right:20px;width:36px;height:80px;overflow:hidden;z-index:1;background-color:#f5f5f5;} 
-.custom_zoomcontrol span {display:block;width:36px;height:40px;text-align:center;cursor:pointer;}     
+.custom_zoomcontrol span {display:block;width:36px;height:40px; user-select: none;text-align:center;cursor:pointer;}     
 .custom_zoomcontrol span img {width:15px;height:15px;padding:12px 0;border:none;}             
 .custom_zoomcontrol span:first-child{border-bottom:1px solid #bfbfbf;} 
-.traffic{ position: absolute; top: 19px; right: 5px; width:140px; height:25px; overflow:hidden; z-index: 1; background-color:#f5f5f5;font-family:'Malgun Gothic', '맑은 고딕', sans-serif;}
-.traffic span {display:block;font-size: 12px;width:65px;height:30px;float:left;text-align:center;line-height:30px;cursor:pointer;}
-
+.traffic{ position: absolute; top: 15px; right: 5px; width:122px; height:29px; overflow:hidden; z-index: 1; background-color:#f5f5f5;font-family:'Malgun Gothic', '맑은 고딕', sans-serif;}
+.traffic span {display:block;float:left;user-select: none;text-align:center;line-height:30px;cursor:pointer;}
+#Skyview_button{font-size: 12px;width:60px;height:30px;}
+#traffic_button{font-size: 12px;width:60px;height:30px;border-right: 1px solid black;}
+.traffic span.active {
+    background-color: #425470; /* 버튼이 활성 상태일 때의 색상 */
+    color: white;
+  }
+  
 /*기본 패널 만들기*/
 div.row {
 width: 100%;
